--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,17 @@
 {%extends "base.html"%}
 
 {%block content%}
+<div class="row">
+  <div id="users">
+      <ul>
+        {%for user in users%}
+        <li><a href="/users/{{userId}}">{{user}}</a></li>
+        {%endfor%}
+      </ul>
+      <a method="GET"
+              href="/users/new"
+              class="btn btn-secondary">Add user</a>
+  </div>
+</div>
 
 {%endblock%}
