--- a/templates/user-edit.html
+++ b/templates/user-edit.html
@@ -6,18 +6,18 @@
 
 <div class="mb-3 row mx-1">
   <div class="col">
-    <form action="/users/{{userId}}/edit" class="">
+    <form action="/users/{{user.id}}/edit" class="">
       <label class="col-6 col-form-label">First Name</label>
-      <input name="firstName" required aria-label="firstName" class="form-control">
+      <input name="firstName" required aria-label="firstName" placeholder="{{user.first_name}}" class="form-control">
       <label class="col-6 col-form-label">Last Name</label>
-      <input name="lastName" required aria-label="lasName" class="form-control">
-      <label class="col-6 col-form-label">Image URL</label>
-      <input name="imageURL" aria-label="imageURL" class="form-control" type="URL">
+      <input name="lastName" required aria-label="lasName" placeholder="{{user.last_name}}" class="form-control">
+      <label class="col-6 col-form-label" >Image URL</label>
+      <input name="imageURL" aria-label="imageURL" placeholder="{{user.image_url}}" class="form-control" type="URL">
       <div class="align-items-end">
-        <button method='GET' action="/users/{{userId}}" class="btn btn-primary-outline">
+        <button method='GET' action="/users/{{user.id}}" class="btn btn-primary-outline">
           cancel
         </button>
-        <button method='POST' action="/users/{{userId}}" class="btn btn-success">
+        <button method='POST' action="/users/{{user.id}}" class="btn btn-success">
           Save
         </button>
       </div>
