--- a/templates/user.html
+++ b/templates/user.html
@@ -5,7 +5,7 @@
   <div id="users">
       <ul>
         {%for user in users%}
-        <li><a href="/users/{{userId}}">{{user}}</a></li>
+        <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
         {%endfor%}
       </ul>
       <a method="GET"
