almost full functionality, bug fixes and minor display changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,11 @@
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
-    <title> {{ title }} </title>
+    <title>Blogly</title>
 </head>
 <body>
-  <h1>{{ title }}</h1>
-  <div class="container">
+  <h1 class="text-align-center">Blogly!</h1>
+  <div class="container mt-5">
     {%block content%}
 
     {%endblock%}
