--- a/templates/user-detail.html
+++ b/templates/user-detail.html
@@ -2,16 +2,18 @@
 
 {%block content%}
 <div class="row">
-  <div class="col">
+  <div class="col-lg-2">
     <img class="img-thumbnail"
           src="{{user.image_url}}"
-          alt="https://kansai-resilience-forum.jp/wp-content/uploads/2019/02/IAFOR-Blank-Avatar-Image-1.jpg">
+          alt="profile picture">
+  </div>
+  <div class="col-lg-2">
     <h2 id="{{user}}">{{user.first_name}} {{user.last_name}}</h2>
     <a class="btn btn-primary"
             href="/users/{{user.id}}/edit">Edit</a>
-
-    <a href="/users/{{user.id}}/delete"
-            class="btn btn-primary">Delete</a>
+    <form class="d-inline" method="POST" action="/users/{{user.id}}/delete">
+    <button type="submit" class="btn btn-primary">Delete</button>
+    </form>
   </div>
 </div>
 {%endblock%}
