--- a/templates/user-detail.html
+++ b/templates/user-detail.html
@@ -4,8 +4,8 @@
 <div class="row">
   <div class="col-lg-2">
     <img class="img-thumbnail"
-          src="{{user.image_url}}"
-          alt="profile picture">
+          src="{{user.image_url}}">
+          <!-- alt="profile picture"> -->
   </div>
   <div class="col-lg-2">
     <h2 id="{{user}}">{{user.first_name}} {{user.last_name}}</h2>
