--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,8 @@
 {%extends "base.html"%}
 
 {%block content%}
+
+
 <div class="row">
   <div class="col">
     <h2 class="text-align-center">{{title}}</h2>
@@ -14,5 +16,9 @@
               class="btn btn-secondary">Add user</a>
   </div>
 </div>
+
+{%for msg in get_flashed_messages()%}
+  <div class="text-primary mt-2">{{msg}}</div>
+{%endfor%}
 
 {%endblock%}
