--- a/templates/new-user-form.html
+++ b/templates/new-user-form.html
@@ -5,15 +5,15 @@
   <div class="col">
     <form action="/users/new" method="POST" class="">
       <label class="col-6 col-form-label">First Name</label>
-      <input name="firstName" required aria-label="firstName" class="form-control">
+      <input name="first-name" required aria-label="first-name" class="form-control">
 
       <label class="col-6 col-form-label">Last Name</label>
-      <input name="lastName" required aria-label="lastName" class="form-control">
+      <input name="last-name" required aria-label="last-name" class="form-control">
 
       <label class="col-6 col-form-label">Image URL</label>
-      <input name="imageURL" aria-label="imageURL" class="form-control" type="URL">
+      <input name="image-url" aria-label="image-url" class="form-control" type="URL">
       <div class="align-items-end">
-        <button type="submit" class="btn btn-success">
+        <button type="submit" class="btn btn-success mt-5">
          Add
         </button>
       </div>
