--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -3,7 +3,7 @@
 {%block content%}
 <div class="mb-3 row mx-1">
   <div class="col">
-    <form action="/users/{{user.id}}/new-post" method="POST" class="">
+    <form action="/users/{{user.id}}/posts/new" method="POST" class="">
       <label class="col-6 col-form-label">Title</label>
       <input name="post-title" required aria-label="post-title" class="form-control">
 
