--- a/templates/user.html
+++ b/templates/user.html
@@ -18,7 +18,7 @@
 </div>
 
 {%for msg in get_flashed_messages()%}
-  <div class="text-primary mt-2">{{msg}}</div>
+  <p class="text-success mt-2"><i>{{msg}}</i></p>
 {%endfor%}
 
 {%endblock%}
