--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -10,15 +10,15 @@
     </div>
     <div class="col">
         <a class="btn btn-primary-outline mx-1" href="/users/{{user.id}}">Cancel</a>
-        <a class="btn btn-primary mx-1" href="/users/{{user.id}}/{{post.title}}/edit">Edit</a>
-        <form method="POST" action="/users/{{user.id}}/{{post.title}}/delete">
+        <a class="btn btn-primary mx-1" href="/posts/{{post.id}}/edit">Edit</a>
+        <form method="POST" action="/posts/{{post.id}}/delete">
             <button type="submit" class="btn btn-primary mx-1">Delete</button>
         </form>
     </div>
 </div>
 
 {%for msg in get_flashed_messages()%}
-    <p>{{msg}}</p>
+    <p class="mt-2 text-success"><i>{{msg}}</i></p>
 {%endfor%}
 
 {%endblock%}
