--- a/templates/user-detail.html
+++ b/templates/user-detail.html
@@ -22,10 +22,10 @@
     <h3>Posts</h3>
     <ul class="mt-4">
       {%for post in posts%}
-      <li class="mt-2"><a href="/users/{{user.id}}/{{post.title}}">{{post.title}}</a></li>
+      <li class="mt-2"><a href="/posts/{{post.id}}">{{post.title}}</a></li>
       {%endfor%}
     </ul>
-    <a class="btn btn-primary mt-2" href="/users/{{user.id}}/new-post">Add Post</a>
+    <a class="btn btn-primary mt-2" href="/users/{{user.id}}/posts/new">Add Post</a>
   </div>
 </div>
 {%endblock%}
