--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
     <h1 class="text-center mt-3">Blogly!</h1>
   </div>
   <div class="container mt-5">
+    {%for msg in get_flashed_messages()%}
+    <p class="mt-2 text-success"><i>{{msg}}</i></p>
+    {%endfor%}
     {%block content%}
 
     {%endblock%}
