--- a/templates/edit-post.html
+++ b/templates/edit-post.html
@@ -13,7 +13,7 @@
         <input name="post-content" value="{{post.content}}" required aria-label="post-content" class="form-control">
 
         <div class="align-content-end">
-          <a method='GET' href="/users/{{user.id}}" class="btn btn-outline-info mx-2 mt-3">
+          <a href="/users/{{post.user_id}}" class="btn btn-outline-info mx-2 mt-3">
             cancel
           </a>
           <button type="submit" class="btn btn-success mx-2 mt-3">
