MANY asthetic changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <body>
   <div>
-    <h1 class="text-center mt-3">Blogly!</h1>
+    <h1 class="text-center display-1 mt-3"><a href="/" class="text-decoration-none text-info">Blogly!</a></h1>
   </div>
   <div class="container mt-5">
     {%for msg in get_flashed_messages()%}
