--- a/templates/user-detail.html
+++ b/templates/user-detail.html
@@ -2,27 +2,32 @@
 
 {% block content %}
 <div class="row">
-  <div class="col">
-    <img class="img-thumbnail" src="{{user.image_url}}">
+  <div class="col-sm-2 col-6">
+    <img class="img-fluid" src="{{user.image_url}}">
   </div>
-  <div class="col d-flex align-items-end">
-    <h2 class="d-block" id="{{user}}">{{user.first_name}} {{user.last_name}}</h2>
-    <a class="btn btn-primary mx-1" href="/users/{{user.id}}/edit">Edit</a>
-    <form method="POST" action="/users/{{user.id}}/delete">
-      <button type="submit" class="btn btn-primary mx-1">Delete</button>
-    </form>
+  <div class="col-sm-10 col-12 mt-1">
+      <h2>{{user.first_name}} {{user.last_name}}</h2>
+      <form method="POST" action="/users/{{user.id}}/delete">
+        <button class="btn btn-primary btn-sm mx-1"
+                formaction="/users/{{user.id}}/edit"
+                formmethod="GET">Edit
+        </button>
+        <button type="submit"
+                class="btn btn-primary btn-sm mx-1">
+                Delete</button>
+      </form>
   </div>
 </div>
 
 <div class="row mt-5">
   <div class="col">
-    <h3>Posts</h3>
-    <ul class="mt-4">
+    <h3 class="text-center display-5">Posts</h3>
+    <ul class="list-group mt-4">
       {% for post in posts %}
-      <li class="mt-2"><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+      <a class="mt-2 text-decoration-none text-center list-group-item-action list-group-item-info display-6 p-2" href="/posts/{{post.id}}">{{post.title}}</a>
       {% endfor %}
     </ul>
-    <a class="btn btn-primary mt-2" href="/users/{{user.id}}/posts/new">Add Post</a>
+    <a class="btn btn-info btn-lg d-block display-5 p-2 mt-4" href="/users/{{user.id}}/posts/new">Add Post</a>
   </div>
 </div>
 {% endblock %}
