--- a/templates/user.html
+++ b/templates/user.html
@@ -5,20 +5,23 @@
 
 <div class="row">
   <div class="col">
-    <h2 class="text-align-center">{{title}}</h2>
-      <ul>
-        {%for user in users%}
-        <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
-        {%endfor%}
-      </ul>
-      <a method="GET"
-              href="/users/new"
-              class="btn btn-secondary">Add user</a>
+    <h2 class="text-center display-4">{{title}}</h2>
   </div>
 </div>
-
-{%for msg in get_flashed_messages()%}
-  <p class="text-success mt-2"><i>{{msg}}</i></p>
-{%endfor%}
+<div class="mt-3 row align-items-center">
+  <div class="col">
+    <ul class="list-group">
+      {%for user in users%}
+      <a class="text-decoration-none text-center list-group-item-action list-group-item-info display-6 p-2"
+        href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a>
+      {%endfor%}
+    </ul>
+  </div>
+</div>
+<div class="row mt-4">
+  <div class="col">
+    <a href="/users/new" class="btn btn-info btn-lg d-block display-5 p-2">Add User</a>
+  </div>
+</div>
 
 {%endblock%}
