fix minor cosmetic things in files for consistency

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,23 @@
   <div>
     <h1 class="text-center display-1 mt-3"><a href="/" class="text-decoration-none text-info">Blogly!</a></h1>
   </div>
-  <div class="container mt-5">
-    {%for msg in get_flashed_messages()%}
-    <p class="mt-2 text-success"><i>{{msg}}</i></p>
-    {%endfor%}
-    {%block content%}
 
-    {%endblock%}
+  <div class="container mt-5">
+
+    {% for msg in get_flashed_messages() %}
+
+    <p class="mt-2 text-success"><i>{{msg}}</i></p>
+
+    {% endfor %}
+
+
+    {% block content %}
+
+    <!-- APPEND TEMPLATES HERE-->
+
+    {% endblock %}
   </div>
 </body>
 
 </html>
+
