--- a/templates/user-detail.html
+++ b/templates/user-detail.html
@@ -24,10 +24,14 @@
     <h3 class="text-center display-5">Posts</h3>
     <ul class="list-group mt-4">
       {% for post in posts %}
-      <a class="mt-2 text-decoration-none text-center list-group-item-action list-group-item-info display-6 p-2" href="/posts/{{post.id}}">{{post.title}}</a>
+      <a class="mt-2 text-decoration-none text-center list-group-item-action list-group-item-info display-6 p-2"
+          href="/posts/{{post.id}}">{{post.title}}</a>
       {% endfor %}
     </ul>
-    <a class="btn btn-info btn-lg d-block display-5 p-2 mt-4" href="/users/{{user.id}}/posts/new">Add Post</a>
+    <a class="btn btn-info btn-lg d-block display-5 p-2 mt-4"
+      href="/users/{{user.id}}/posts/new">Add Post</a>
   </div>
 </div>
 {% endblock %}
+
+
